syntax = "proto3";

package example.enumerations;

option go_package = "course.proto.go.com/proto";

enum EyeColor {
	ENUM_ONE_UNSPECIFIED = 0;
	EYE_COLOR_BLUE = 1;
	EYE_COLOR_GREEN = 2;
	EYE_COLOR_BROWN = 3;
}

message Enumeration {
	EyeColor eye_color = 1;
}